--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "api/index.js",
   "scripts": {
-    "dev": "nodemon -r dotenv/config --experimental-json-modules src/api/index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules api/index.js"
   },
   "keywords": [
     "javascrpit",
